[package]
name = "ssrust_epoll"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.37"
nix = { version = "0.28.0", features = ["poll","event"] }
simple-dns = "0.7.0"
socket2 = "0.5.6"

[features]
hongkong = []
